--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>A Document Demo</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="interface.css">
+  <script src="https://unpkg.com/pagedjs/dist/paged.polyfill.js"></script>
 </head>
 <body>
   <h1>What Is a “Document”?</h1>
@@ -13,6 +15,11 @@
   <p><em>Ordinarily the word “document” denotes a textual record. Increasingly sophisticated attempts to provide access to the rapidly growing quantity of available documents raised questions about what should be considered a “document.” The answer is important for any definition of the scope of Information Science. Paul Otlet and others developed a functional view of “document” and discussed whether, for example, sculpture, museum objects, and live animals, could be considered “documents.” Suzanne Briet equated “document” with organized physical evidence. These ideas appear to resemble notions of “material culture” in cultural anthropology and “object-as-sign” in semiotics. Others, especially in the U.S.A. (e.g., Jesse Shera and Louis Shores) took a narrower view. New digital technology renews old questions and also old confusions between medium, message, and meaning.</em></p>
 
   <hr>
+
+  <section class="two-col">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </section>
 
   <h2>Introduction</h2>
 
@@ -50,7 +57,7 @@
   <p>An early development was to extend the notion of document beyond written texts, a usage to be found in major English and French dictionaries.<sup id="fnref:5"><a href="#fn:5" class="footnote-ref" role="doc-noteref">5</a></sup> “Any expression of human thought” was a frequently used definition of “document” among documentalists. In the U.S.A., the phrases “the graphic record” and “the generic book” were widely used. This was convenient for extending the scope of the field to include pictures and other graphic and audio-visual materials. Paul Otlet (1868 – 1944), is known for his observation that documents could be three-dimensional, which enabled the inclusion of sculpture. From 1928, museum objects were likely to be included by documentalists within definitions of “document”.<sup id="fnref:6"><a href="#fn:6" class="footnote-ref" role="doc-noteref">6</a></sup></p>
 
   <p>The overwhelming practical concern of documentalists was with printed documents, so the question of how far the definition of “document” could be extended received little direct attention. Nevertheless, the occasional thoughtful writer would touch on the topic, perhaps because interested in some novel form of signifying object, such as educational toys, or because of a desire to generalize.</p>
-
+  
   <h2>Paul Otlet: Objects as Documents</h2>
 
   <p>Otlet extended the definition of “document” halfway through his Traité de documentation of 1934. Graphic and written records are representations of ideas or of objects, he wrote, but the objects themselves can be regarded as “documents” if you are informed by observation of them. As examples of such “documents,” Otlet cites natural objects, artifacts, objects bearing traces of human activity (such as archaeological finds), explanatory models, educational games, and works of art.<sup id="fnref:7"><a href="#fn:7" class="footnote-ref" role="doc-noteref">7</a></sup></p>
